# src/web/services/v1/authservice/logout.go
@@ -17,8 +17,8 @@ import (
 // @Accept json
 // @Produce json
 // @Success 200
-// @Failure 401 {object} v1error.ErrorResponse{}
-// @Failure 404 {object} v1error.ErrorResponse{}
+// @Failure 401 {object} errorinterface.ErrorResponse{}
+// @Failure 404 {object} errorinterface.ErrorResponse{}
 // @Router /logout [POST]
 func (as *authservice) Logout(w http.ResponseWriter, r *http.Request) {
 	txID := r.Header["transaction_id"][0]
