# src/web/services/v1/authservice/validate.go
@@ -16,8 +16,8 @@ import (
 // @Accept json
 // @Produce json
 // @Success 200
-// @Failure 401 {object} v1error.ErrorResponse{}
-// @Failure 404 {object} v1error.ErrorResponse{}
+// @Failure 401 {object} errorinterface.ErrorResponse{}
+// @Failure 404 {object} errorinterface.ErrorResponse{}
 // @Router /validate [POST]
 func (as *authservice) Validate(w http.ResponseWriter, r *http.Request) {
 	_, _, err := jwtauth.FromContext(r.Context())
